--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Nunito&display=swap');
 
 :root {
   --primaryColor: #fff;
@@ -13,7 +13,25 @@ html {
   box-sizing: border-box;
 }
 
+body {
+  margin: 0;
+  background: #000;
+  font-family: 'Montserrat', sans-serif;
+}
+
 /* --- Navigation Menu ------------------------------ */
+
+/* Overlay */
+
+.overlay {
+  position: fixed;
+  z-index: 9;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7);
+}
 
 /* --- Menu Bars ------------------------------------ */
 
