--- a/style.css
+++ b/style.css
@@ -33,6 +33,33 @@ body {
   background-color: rgba(0, 0, 0, 0.7);
 }
 
+nav,
+nav ul {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+}
+
+nav li:nth-of-type(1) {
+  background-color: var(--navColor1);
+}
+
+nav li:nth-of-type(2) {
+  background-color: var(--navColor2);
+}
+
+nav li:nth-of-type(3) {
+  background-color: var(--navColor3);
+}
+
+nav li:nth-of-type(4) {
+  background-color: var(--navColor4);
+}
+
+nav li:nth-of-type(5) {
+  background-color: var(--navColor5);
+}
+
 /* --- Menu Bars ------------------------------------ */
 
 .menu-bars {
